data/derived/fa15/progs/unify/prog1662.ml.out
Characters 29-42:
  let fixpoint (f,b) = wwhile ((helper(f,b)),b);;
                               ^^^^^^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
